--- a/sketch/demos/style.css
+++ b/sketch/demos/style.css
@@ -31,4 +31,15 @@ a:hover {
   text-decoration: none;
 }
 
-button, .b
+button, .button, select {
+  font-family: "Roboto", Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 16px;
+  padding: 4px 14px;
+  margin-right: 8px;
+  border: 3px solid #222;
+  background: transparent;
+  outline: none;
+  color: #222;
+  background: w
