--- a/sketch/demos/style.css
+++ b/sketch/demos/style.css
@@ -42,4 +42,23 @@ button, .button, select {
   background: transparent;
   outline: none;
   color: #222;
-  background: w
+  background: white;
+  cursor: pointer;
+}
+select {
+  text-transform: none;
+  height: 32px;
+}
+button:hover {
+  background: #6FC9C6;
+  color: white;
+}
+button[disabled] {
+  opacity: 0.5;
+}
+#sketch {
+  margin-top: -3px;
+}
+#sketch canvas {
+  bordeR: 3px solid black;
+}
